struct Path
{
	1: string content,
	2: bool hasWritten,
	3: list<string> route
}

